Workaround for Chrome, which incorrectly displays scrollbars when the page size is auto - The incorrect displays were caused by a Chrome bug, see https://code.google.com/p/chromium/issues/detail?id=240772

--- a/src/scss/ui.menu-bar.scss
+++ b/src/scss/ui.menu-bar.scss
@@ -20,7 +20,9 @@ $icon-height: 36px;
 		margin-top: $icon-height;
 		height: calc(100vh - #{$icon-height});
 		width: 100vw;
-		overflow: auto;
+		&[data-vivliostyle-viewer-status=complete] {
+			overflow: auto;
+		}
 	}
 }
 
